# Dynamic-Architecture-Router-for-Agentic-Systems

./: .env.example  .gitignore  AGENTS.md  CURRENT_STATUS.md  README.md  TASKS.md  benchmark_results.json  benchmark_workbench_results.csv  benchmark_workbench_results.json  evaluate_regret.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_benchmark_sweep.py  run_browsecomp_sweep.py  run_examples.py  run_finrate_sweep.py  run_workbench_benchmark.py
benchmarks/: browsecomp_corpus_fixture.jsonl  browsecomp_fixture.jsonl  finrate_corpus_fixture.jsonl  finrate_fixture_qa.jsonl  workbench_50_manifest.json  workbench_50_queries.csv
docs/: PROJECT_PLAN.md  research_notes.md
docs/papers/: browsecomp_plus.md  fin_rate.md  mast_multi_agent_failures.md  scaling_agent_systems.md  single_agent_with_skills.md
results/: README.md
results/llm_fixed_corpus_analysis/: llm_fixed_corpus_30_architecture_performance_20260512_193422.csv  llm_fixed_corpus_30_oracle_tasks_20260512_193422.csv  llm_fixed_corpus_30_router_regret_20260512_193422.csv  llm_fixed_corpus_30_summary_20260512_193422.json  llm_fixed_corpus_30_tables_20260512_193422.tex  mast_semantic_failure_distribution_30_20260512_200807.csv
scripts/: analyze_llm_fixed_corpus_results.py  analyze_routing_mismatches.py  annotate_router_predictions.py  build_workbench_50_slice.py  convert_browsecomp_plus.py  convert_finrate.py  export_router_training_rows.py  rejudge_finrate_results.py  router_dspy_baseline.py  sample_browsecomp_queries.py  setup_pcab.py  setup_workbench.py  train_router_from_regret.py
src/: __init__.py
src/dynamic_routing/: __init__.py  agent_tools.py  browsecomp_env.py  browsecomp_runner.py  browsecomp_tools.py  centralized_mas.py  chat_models.py  (+15 more)
tests/: __init__.py  conftest.py  test_browsecomp_env.py  test_browsecomp_judge.py  test_evaluate_regret.py  test_finrate_judge.py  test_router.py
(+56 files in other folders)
