[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-routing-agents"
version = "0.1.0"
description = "Dynamic Architecture Router for Agentic Systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "python-dotenv>=1.0.0",
    "typing_extensions>=4.8.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
router-ml = ["scikit-learn>=1.3.0", "joblib>=1.3.0", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]
